# fixmyjavainstall

./: .editorconfig  .ihatewindows  .rustfmt.toml  CONTRIBUTING.md  Cargo.toml  INSTALLATION.md  LICENCE  LICENCE-APACHE  LICENCE-MIT  README.md  TODO.md  deny.toml  dist-workspace.toml  fuji.java.desktop  fuji.java.terminal.desktop  rust-toolchain.toml  wintest.bat
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature-request.md  feature_request.md
.github/workflows/: release.yml
apple/: NOTES.txt  fuji.plist
doc/: function_doc_template.txt  logo.txt
doc/jdk/: GraalVM.txt  JBR.txt  JavaSE.txt  Liberica.txt  Temurin.txt
doc/jvm/: JBR.txt  JavaSE.txt  Liberica.txt  Temurin.txt
listing/jvm/java-se/: latest.json  lts.json
listing/jvm/jbr/: 17.json  21.json  25.json  latest.json  lts.json
listing/jvm/liberica/: 10.json  11.json  12.json  13.json  14.json  15.json  16.json  17.json  18.json  19.json  20.json  21.json  22.json  23.json  24.json  25.json  26.json  8.json
listing/kt/: stable.json  unstable.json
src/: arch.rs  cli.rs  cmd_install.rs  cmd_link.rs  cmd_man.rs  cmd_manage.rs  cmd_preset.rs  commands.rs  env_util.rs  fuji.rs  fuji_value_enum.rs  install_method.rs  lib.rs  macros.rs  main.rs  man.rs  manage_jvm.rs  os.rs  path_util.rs  win_link.rs
src/jvm/: cmd_install.rs  cmd_preset.rs  desktop.rs  feature.rs  install.rs  java_home.rs  jdk.rs  jdk_generic.rs  jdk_java_se.rs  jdk_jbr.rs  jdk_liberica.rs  jdk_temurin.rs  jvm.rs  jvm_generic.rs  jvm_java_se.rs  jvm_jbr.rs  jvm_liberica.rs  jvm_temurin.rs  major_version.rs  manage_jvm.rs  mod.rs  vendor.rs  wrapper.rs
src/kotlin/: cmd_install.rs  mod.rs
src/tui/: app.rs  component.rs  mod.rs  state.rs  tab.rs
src/tui/component/: exit_dialogue.rs  help.rs  list.rs  logo.rs  mod.rs
src/tui/page/: home.rs  jvm.rs  mod.rs
src/tui/page/jvm/: mod.rs
src/tui/page/jvm/install_option/: arch_option.rs  feature_option.rs  jvm_option.rs  method_option.rs  mod.rs  os_option.rs
