[package]
name = "fuji"
version = "0.5.0"
authors = ["Mavity The Madity"]
edition = "2024"
rust-version = "1.95.0"
description = "A JVM & Kotlin management utility"
readme = "README.md"
homepage = "https://github.com/EpicVon2468/fixmyjavainstall/"
repository = "https://github.com/EpicVon2468/fixmyjavainstall/"
license = "MIT OR Apache-2.0"
keywords = ["utility", "config", "cli"]
categories = ["command-line-utilities", "config"]
exclude = [".github/", "doc/", "listing/", "*.desktop"]
publish = false
default-run = "fuji"
autolib = false
autobins = false

[features]
multi-os = []
dev = []
interactive = ["dep:dialoguer"]
openjdk-deprecated = []
tui = ["dep:ratatui"]

[lib]
name = "fuji"
path = "src/fuji.rs"
test = true
doctest = false
bench = true
doc = true
proc-macro = false
harness = true

[[bin]]
name = "fuji"
path = "src/bin/main.rs"
test = false
doctest = false
bench = false
doc = false
harness = false

[[bin]]
name = "fuji-jvm"
path = "src/bin/jvm.rs"
test = false
doctest = false
bench = false
doc = false
harness = false

[[bin]]
name = "fuji-kt"
path = "src/bin/kt.rs"
test = false
doctest = false
bench = false
doc = false
harness = false

[[bin]]
name = "fuji-tui"
path = "src/bin/tui.rs"
test = false
doctest = false
bench = false
doc = false
harness = false

[dependencies]
clap_mangen = "0"
serde = { version = "1", features = ["derive"] }
which = "8"
tar = { version = "0", default-features = false }
flate2 = "1"
ureq = { version = "3", features = ["json", "rustls"], default-features = false }
indicatif = { version = "0", features = ["improved_unicode"], default-features = false }
anyhow = "1"
zip = { version = "8", features = ["deflate-flate2"], default-features = false }
console = "0"
shell-words = "1"

[dependencies.clap]
version = "4"
features = [
	"derive",
	"string",
	"unstable-markdown",
	"unicode",
	"unstable-v5",
]

[dependencies.dialoguer]
version = "0"
optional = true
features = ["editor"]
default-features = false

[dependencies.ratatui]
version = "0"
optional = true
features = ["std", "crossterm"]
default-features = false

[target.'cfg(windows)'.dependencies]
windows-registry = "0"

[patch.crates-io]
ring = { git = "https://github.com/briansmith/ring" }

[package.metadata.dist]
dist = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"