[package]
name = "fixurjavainstall"
version = "0.7.2"
authors = [
	"Mavity The Madity",
]
edition = "2024"
rust-version = "1.97.0"
description = "A JVM & Kotlin management utility"
readme = "README.md"
homepage = "https://github.com/EpicVon2468/fixurjavainstall/"
repository = "https://github.com/EpicVon2468/fixurjavainstall/"
documentation = "https://docs.rs/fixurjavainstall/latest/fuji/"
license = "MIT OR Apache-2.0"
keywords = [
	"utility",
	"config",
	"cli",
	"java",
	"jvm",
]
categories = [
	"command-line-utilities",
	"config",
]
exclude = [
	".github/",
	"listing/",
	"apple/",
	"man/",
	"doc/function_doc_template.txt",
]
default-run = "fuji"
autolib = false
autobins = false

[features]
default = [
	"openjdk-restricted",
]
multi-os = []
dev = []
interactive = [
	"dep:dialoguer",
]
# https://docs.oracle.com/en/java/javase/26/core/restricted-methods.html
# https://openjdk.org/jeps/472
# https://openjdk.org/jeps/471
# https://openjdk.org/jeps/500
openjdk-restricted = []
tui = [
	"dep:ratatui",
]

[lib]
name = "fuji"
path = "src/fuji.rs"
test = true
doctest = false
bench = true
doc = true
proc-macro = false
harness = true

[[bin]]
name = "fuji"
path = "src/bin/main.rs"
test = false
doctest = false
bench = false
doc = false
harness = false

[[bin]]
name = "fuji-jvm"
path = "src/bin/jvm.rs"
test = false
doctest = false
bench = false
doc = false
harness = false

[[bin]]
name = "fuji-kt"
path = "src/bin/kt.rs"
test = false
doctest = false
bench = false
doc = false
harness = false

[[bin]]
name = "fuji-tui"
path = "src/bin/tui.rs"
test = false
doctest = false
bench = false
doc = false
harness = false
required-features = [
	"tui",
]

[dependencies]
clap_mangen = ">=0.3.0, <1"
which = ">=8.0.2, <9"
flate2 = ">=1.1.9, <2"
anyhow = ">=1.0.102, <2"
console = ">=0.16.3, <1"
shell-words = ">=1.1.1, <2"
unicode-width = ">=0.2.2, <1"

[dependencies.clap]
version = ">=4.6.1, <5"
features = [
	"derive",
	"string",
	"unstable-markdown",
	"unicode",
	"unstable-v5",
]

[dependencies.dialoguer]
version = ">=0.12.0, <1"
optional = true
features = [
	"editor",
]
default-features = false

[dependencies.ratatui]
version = ">=0.30.0, <1"
optional = true
features = [
	"std",
	"crossterm",
	"layout-cache",
]
default-features = false

[dependencies.serde]
version = ">=1.0.228, <2"
features = [
	"derive",
]

[dependencies.tar]
# Explicit specification because lower versions have potential vulns
version = ">=0.4.45, <1"
default-features = false

[dependencies.ureq]
version = ">=3.3.0, <4"
features = [
	"json",
	"rustls",
]
default-features = false

[dependencies.indicatif]
version = ">=0.18.4, <1"
features = [
	"improved_unicode",
]
default-features = false

[dependencies.zip]
version = ">=8.6.0, <9"
features = [
	"deflate-flate2",
]
default-features = false

[target.'cfg(windows)'.dependencies]
windows-registry = ">=0.6.1, <1"

[patch.crates-io]
ring = {
	git = "https://github.com/briansmith/ring"
}
kasuari = {
	git = "https://github.com/ratatui/kasuari",
	rev = "8c75fa3",
}

[package.metadata.dist]
dist = true
# https://github.com/axodotdev/cargo-dist/issues/745
features = [
	"openjdk-restricted",
	"tui",
]

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"